--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,13 @@
+[versions]
+spock = "2.0-groovy-3.0"
+
 [libraries]
 jackson-platform = { group = "com.fasterxml.jackson", name = "jackson-bom", version = "2.13.0" }
 jackson-databind = { group = "com.fasterxml.jackson.core", name = "jackson-databind" }
 jackson-parameter-names = { group = "com.fasterxml.jackson.module", name = "jackson-module-parameter-names" }
 jackson-kotlin = { group = "com.fasterxml.jackson.module", name = "jackson-module-kotlin" }
 
-spock_core = { group = "org.spockframework", name = "spock-core", version = "2.0-groovy-3.0" }
+apache-httpclient = { group = "org.apache.httpcomponents.client5", name = "httpclient5", version = "5.1.2" }
+
+spock_core = { group = "org.spockframework", name = "spock-core", version.ref = "spock" }
+spock_junit4 = { group = "org.spockframework", name = "spock-junit4", version.ref = "spock" }
