--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,6 +29,7 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: ${{ matrix.java_version }}
+        distribution: temurin
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
       with:
