--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,11 +38,13 @@ jobs:
         uses: EnricoMi/publish-unit-test-result-action/composite@v1
         if: (matrix.os == 'macos-latest' || matrix.os == 'windows-latest') && ${{ failure() }}
         with:
+          check_name: Unit Test Results ${{ matrix.os }} java ${{ matrix.java_version }}
           files: '**/test-results/**/*.xml'
       - name: Publish Unit Test Results (linux)
         uses: EnricoMi/publish-unit-test-result-action@v1
         if: matrix.os == 'ubuntu-latest'
         with:
+          check_name: Unit Test Results ${{ matrix.os }} java ${{ matrix.java_version }}
           files: '**/test-results/**/*.xml'
       - uses: actions/upload-artifact@v2
         if: ${{ failure() }}
