--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,27 +26,42 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
+
       - name: Set up JDK
         uses: actions/setup-java@v2
         with:
           java-version: ${{ matrix.java_version }}
           distribution: temurin
+
       - name: Execute Gradle Build
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: build --scan
+          arguments: -S build --scan
+
+      - name: Self Test :plugin
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: --no-configuration-cache -S -I self-test.init.gradle :plugin:dependencies
+
+      - name: Self Test :plugin-test
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: --no-configuration-cache -S -I self-test.init.gradle :plugin-test:dependencies
+
       - name: Publish Unit Test Results (macos & windows)
         uses: EnricoMi/publish-unit-test-result-action/composite@v1
         if: (matrix.os == 'macos-latest' || matrix.os == 'windows-latest') && ${{ failure() }}
         with:
           check_name: Unit Test Results ${{ matrix.os }} java ${{ matrix.java_version }}
           files: '**/test-results/**/*.xml'
+
       - name: Publish Unit Test Results (linux)
         uses: EnricoMi/publish-unit-test-result-action@v1
         if: matrix.os == 'ubuntu-latest'
         with:
           check_name: Unit Test Results ${{ matrix.os }} java ${{ matrix.java_version }}
           files: '**/test-results/**/*.xml'
+
       - name: Upload Reports
         uses: actions/upload-artifact@v2
         if: ${{ failure() }}
