Fix self-test step

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,12 +41,12 @@ jobs:
       - name: Self Test :plugin
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: --no-configuration-cache -S -I self-test.init.gradle :plugin:dependencies
+          arguments: --no-configuration-cache -S -I plugin-self-test.init.gradle :plugin:dependencies
 
       - name: Self Test :plugin-test
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: --no-configuration-cache -S -I self-test.init.gradle :plugin-test:dependencies
+          arguments: --no-configuration-cache -S -I plugin-self-test.init.gradle :plugin-test:dependencies
 
       - name: Publish Unit Test Results (macos & windows)
         uses: EnricoMi/publish-unit-test-result-action/composite@v1
