--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -13,6 +13,8 @@ jobs:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
         java_version: [8, 11, 17]
     runs-on: ${{ matrix.os }}
+    env:
+      GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
     steps:
       - uses: actions/checkout@v3
 
