Run quick-check on Java 17
This allows me to defer fixing test failures on Gradle 5.0, for the time being.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,6 +14,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+            java-version: 17
+            distribution: temurin
+
       - name: Execute Gradle Build
         uses: gradle/gradle-build-action@v2
         with:
