--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,7 +31,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        gradle-version: [ "5.6.4", "6.9.4", "7.6.1"]
+        gradle-version: [ "5.6.4", "7.6.1"]
+        # Plugin not currently compatible with Gradle 6.9.x
     runs-on: ubuntu-latest
     env:
       GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
