--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 spock = "2.0-groovy-3.0"
+kotlin = "1.8.10"
 
 [libraries]
 jackson-platform = { group = "com.fasterxml.jackson", name = "jackson-bom", version = "2.14.2" }
