Update for release

--- a/plugin-self-test.init.gradle
+++ b/plugin-self-test.init.gradle
@@ -6,7 +6,7 @@ initscript {
         }
     }
     dependencies {
-        classpath "org.gradle:github-dependency-graph-gradle-plugin:0.0.1"
+        classpath "org.gradle:github-dependency-graph-gradle-plugin:+"
     }
 }
 apply plugin: GitHubDependencyGraphPlugin
