Run CI on push to any branch
... and ignore 'release' dir

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,7 +2,8 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ main ]
+    paths-ignore:
+    - 'release/**'
   pull_request:
     branches: [ main ]
 
