--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -73,8 +73,8 @@ jobs:
             run: ./plugin-self-test GitHubDependencyGraphPlugin_generateDependencyGraph
             env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                GITHUB_DEPENDENCY_GRAPH_JOB_ID: ${{ github.run_id }}
-                GITHUB_DEPENDENCY_GRAPH_JOB_CORRELATOR: "plugin-self-test"
+                GITHUB_JOB_ID: ${{ github.run_id }}
+                GITHUB_JOB_CORRELATOR: "plugin-self-test"
 
           - name: Save plugin JSON report
             uses: actions/upload-artifact@v3
