Decouple inputs from default GitHub env vars
Instead of reading built-in GitHub environment variables directly, the caller must
map these to environment variables defined explicitly for this plugin.
This will allow us to use modified input parameters in GitHub Actions
without overriding these built-in environment variable.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -72,8 +72,11 @@ jobs:
             run: ./plugin-self-test ForceDependencyResolutionPlugin_resolveAllDependencies
             env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                GITHUB_JOB_ID: ${{ github.run_id }}
-                GITHUB_JOB_CORRELATOR: "plugin-self-test"
+                GITHUB_DEPENDENCY_GRAPH_JOB_ID: ${{ github.run_id }}
+                GITHUB_DEPENDENCY_GRAPH_JOB_CORRELATOR: "plugin-self-test"
+                GITHUB_DEPENDENCY_GRAPH_REF: ${{ github.ref }}
+                GITHUB_DEPENDENCY_GRAPH_SHA: ${{ github.sha }}
+                GITHUB_DEPENDENCY_GRAPH_WORKSPACE: ${{ github.workspace }}
 
           - name: Save plugin JSON report
             uses: actions/upload-artifact@v3
