--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,8 +16,6 @@ github-packageurl = { group = "com.github.package-url", name = "packageurl-java"
 spock-core = { group = "org.spockframework", name = "spock-core", version.ref = "spock" }
 spock-junit4 = { group = "org.spockframework", name = "spock-junit4", version.ref = "spock" }
 junit-junit4 = { group = "junit", name = "junit", version = "4.13.2" }
-
-
 junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version = "5.8.2" }
 
 groovy-json = { group = "org.codehaus.groovy", name = "groovy-json", version = "3.0.9" }
@@ -26,4 +24,6 @@ jetbrains-annotations = { group = "org.jetbrains", name = "annotations", version
 google-gson = { group = "com.google.code.gson", name = "gson", version = "2.8.9" }
 
 [plugins]
-shadow-jar = { id = "com.github.johnrengelman.shadow", version = "8.1.0"}
+shadow-jar = { id = "com.github.johnrengelman.shadow", version = "8.1.1"}
+plugin-publish = { id = "com.gradle.plugin-publish", version = "1.2.1" }
+github-release = { id = "com.github.breadmoirai.github-release", version = "2.4.1"}
