--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-spock = "2.0-groovy-3.0"
+spock = "2.3-groovy-3.0"
 kotlin = "1.8.10"
 
 [libraries]
@@ -13,15 +13,17 @@ apache-commons-io = { group = "commons-io", name = "commons-io", version = "2.11
 
 github-packageurl = { group = "com.github.package-url", name = "packageurl-java", version = "1.4.1" }
 
+### Test dependencies
+
 spock-core = { group = "org.spockframework", name = "spock-core", version.ref = "spock" }
 spock-junit4 = { group = "org.spockframework", name = "spock-junit4", version.ref = "spock" }
 junit-junit4 = { group = "junit", name = "junit", version = "4.13.2" }
-junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version = "5.8.2" }
+junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version = "5.10.0" }
 
-groovy-json = { group = "org.codehaus.groovy", name = "groovy-json", version = "3.0.9" }
-json-schema-validator = { group = "com.networknt", name = "json-schema-validator", version = "1.0.64" }
-jetbrains-annotations = { group = "org.jetbrains", name = "annotations", version = "22.0.0" }
-google-gson = { group = "com.google.code.gson", name = "gson", version = "2.8.9" }
+groovy-json = { group = "org.codehaus.groovy", name = "groovy-json", version = "3.0.19" }
+json-schema-validator = { group = "com.networknt", name = "json-schema-validator", version = "1.0.87" }
+jetbrains-annotations = { group = "org.jetbrains", name = "annotations", version = "24.0.1" }
+google-gson = { group = "com.google.code.gson", name = "gson", version = "2.10.1" }
 
 [plugins]
 shadow-jar = { id = "com.github.johnrengelman.shadow", version = "8.1.1"}
