--- a/sample-projects/java-single-project/settings.gradle
+++ b/sample-projects/java-single-project/settings.gradle
@@ -1,4 +1,4 @@
 plugins {
-    id 'com.gradle.enterprise' version '3.12.6'
+    id 'com.gradle.develocity' version '3.18.1'
 }
 rootProject.name = 'java-lib'
